--- a/code/001b_city_region_map.Rmd
+++ b/code/001b_city_region_map.Rmd
@@ -16,6 +16,7 @@ Sys.setenv(LANG = "en")
 source("./code/_pkgs_dirs.R")
 source('./code/func_clean_geo.R')
 
+conflicts_prefer(cowplot::theme_nothing)
 
 ## all data from Covidence
 f <- paste0('./data/dt.rds')
@@ -159,8 +160,13 @@ f <- paste0('./data/dt_city_geocoded.rds')
 dt_city <- readRDS(f) 
 
 dt_city_count <- dt_city %>%
+  dplyr::mutate(
+    City = gsub('Hongkong', 'Hong Kong', City),
+    City = gsub("Ya’an", "Ya'an", City),
+    ) %>%
   dplyr::group_by(across(c(-id))) %>%
-  dplyr::summarize(count = n())
+  dplyr::summarize(count = n()) %>%
+  ungroup()
 
 hist(dt_city_count$count)
 
@@ -172,7 +178,7 @@ hist(dt_city_count$count)
 
 ```{r - region - map}
 
-shp <- SDGdetector::shp
+# shp <- SDGdetector::shp
 # mollweide_crs <- "+proj=moll +lon_0=0 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs"
 # robinson_crs  <- "+proj=robin +lon_0=0 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs"
 ##' Define the McBryde-Thomas Flat-Polar Quartic projection
@@ -239,6 +245,51 @@ plot.with.inset
 
 fname <- paste0(dir.fig, 'pub_byYearRegion_map_', today, '.png'); fname
 func_ggsave(fname = fname, w = 6.5, h = 2.8, dpi = 600, save_png = T)
+```
+
+
+```{r - map - cities in China}
+
+pub_byregion_map_cn <- region_count_sf %>%
+  dplyr::filter(name != 'Antarctica') %>%
+  dplyr::filter(iso_a3 == 'CHN') 
+
+
+# Step 2: Define Albers Equal-Area Conic projection (specific for China)
+crs_albers <- "+proj=aea +lat_1=25 +lat_2=47 +lon_0=105 +datum=WGS84 +units=m +no_defs"
+pub_byregion_map_cn_albers <- sf::st_transform(
+  pub_byregion_map_cn, 
+  crs = crs_albers)
+
+
+dt_city_count_cn <- sf::st_as_sf(dt_city_count, coords = c("lon", "lat"), crs = 4326) %>%
+  dplyr::filter(Country %in% c('China', 'Taiwan'));
+dt_city_count_cn_albers <- sf::st_transform(dt_city_count_cn, crs = crs_albers)
+
+
+# Step 3: Plot the reprojected map using ggplot2
+p <- 
+  pub_byregion_map_cn_albers %>%
+  ggplot(.) +
+  geom_sf(fill = 'gray95', size = 0.1, color = 'gray40') +
+
+  
+  geom_sf(data = dt_city_count_cn_albers,
+          aes(size = count), 
+          color = 'red', shape = 1, alpha = 0.5) +
+  # geom_point(data = dt_city_count , 
+  #            aes(x = lon, y = lat, 
+  #                size = count), color = 'red', shape = 16, alpha = 0.5) +
+  scale_size_continuous(name = 'Study #', range = c(0.8, 5), breaks = c(1, 2, 4, 6, 8)) +
+
+  theme_nothing() +
+  theme(legend.position = c(0.1, 0.4), 
+        legend.box = "horizontal") 
+
+p
+
+fname <- paste0(dir.fig, 'pub_byYearRegion_map_cn_', today, '_v2.png'); fname
+func_ggsave(fname = fname, w = 6.5, h = 5, dpi = 300, save_png = T)
 ```
 
 
