--- a/code/001b_city_region_map.Rmd
+++ b/code/001b_city_region_map.Rmd
@@ -57,12 +57,11 @@ pub_byYear_p <- pub_byYear %>%
   geom_text(data = . %>% dplyr::filter(Year_pub >= 2021), 
             aes(label = n), vjust = 0.5, hjust = -0.5, size = 3, color = 'gray20') +
   scale_x_continuous(breaks = c(seq(yr_min, yr_max, by=5), 2023)) +
+  scale_y_continuous(position = "right") +
   xlab('Year')+
   ylab('Number of publications')+
   theme_bw() +
-  theme(panel.grid = element_blank()
-    
-  )
+  theme(panel.grid = element_blank())
 pub_byYear_p
 
 f <- paste0(dir.fig, 'pub_byYear.png'); f
@@ -237,7 +236,7 @@ plot.with.inset <-
                                      legend.title = element_text(size = 9),
                                      legend.position = c(0.1, 0.3),
                                      legend.key.size = unit(0.8, "lines")), 
-            x = -0.2, y = .35, width = w_map, height = w_map/2) +
+            x = -0.25, y = .35, width = w_map, height = w_map/2) +
   draw_label("", x = 0.02, y=0.95, fontface = 'bold')
 
 plot.with.inset
